feat(view): fix view api docs
